# WoKaBeTrEnA

./: .gitignore  Dockerfile  Dockerfile_TLS  Dockerfile_distroless  LICENSE  README.md  buildimage_TLS.sh  changelog.md  pyproject.toml  requirements.txt  runPodman.sh  todo.md
app/: app.py  asgi.py  forms.py  main.py  models.py
app/definitions/: icons.py
app/foreigns/: translation.py
app/instance/: vocab.db
app/static/: styles.css
app/templates/: admin.html  admin_db_backup.html  admin_db_reset_confirm.html  admin_db_restore.html  admin_edit_word_groups.html  admin_group_create.html  admin_group_edit.html  admin_group_update.html  admin_groups.html  admin_groups_list.html  admin_users.html  admin_words.html  base.html  change_password.html  declination_settings.html  edit_word.html  index.html  login.html  nowords.html  stats.html  test.html  testdeclinations.html
docs/: csvformats.md  generate_vocablelists.md  tenses.md
examples/: deutsch_spanisch_verbs_declination.csv  deutsch_spanische_example.csv  englisch_spanish_example.csv  english_german_example.csv  english_italian_example.csv  espanol_aleman_example.csv  espanol_ingles_example.csv  german_english_examples.csv  italiano_inglese_example.csv
maintainance/: findallforeinfields.py  recover_admin.py
spec/: wokabetrena.spec
