[project]
name = "vocabeltrainer"
version = "0.1.116"
description = "simple multilingual vocable trainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",    
    "coloredlogs>=15.0.1",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "httptools>=0.7.1",         #pyinstaller
    "pyinstaller>=6.19.0",       #pyinstaller
    "uvicorn[standard]>=0.40.0",  #pyinstaller
    "uvloop>=0.22.1",  #pyinstaller
    "watchgod>=0.8.2",  #pyinstaller
    "websockets>=16.0",  #pyinstaller
    "werkzeug>=3.1.5",  
    "wsproto>=1.3.2",  #pyinstaller
]
[tool.bumpver]
current_version = "0.1.116"
version_pattern = "MAJOR.MINOR.PATCH"
commit = true                    # Auto-commit
commit_message = 'Latest Version {new_version}'
tag = true                       # Auto-tag
tag_name = "v{version}"
push = true                     #  auto-push

[tool.bumpver.file_patterns]
"app/app.py" = ["__VERSION__ = \"{version}\""]
"app/models.py" = ["__VERSION__ = \"{version}\""]
"pyproject.toml" = ["version = \"{version}\""]
"changelog.md" = ["# app.py new {version}"]
